data/style.css
/* ... */
/***** Char browse *****/

div.charb table    { table-layout: fixed }
div.charb td       { white-space: nowrap }
div.charb td.tc1   { text-align: right; width: 40px; padding-left: 0!important; padding-bottom: 0 }
div.charb td.tc2   { overflow: hidden }
div.charb td.tc2 b { margin-left: 10px }
div.charb td.tc2 b a { color: $grayedout$!important }


/***** Staff browse *****/

div.staffbrowse	   { padding-bottom: 10px }
.staffbrowse ul    { float: left; margin-top: -5px; margin-left: 3%; width: 28%; }
.staffbrowse ul li { list-style-type: none; margin-bottom: 2px; }
.staffbrowse ul li abbr { margin-right: 5px; margin-top: 1px; }
.staffpage table.stripe { width: 450px; margin: 0 auto; }
.staffpage .key  { width: 70px; }
.staffroles td.tc2 { white-space: nowrap; width: 80px }
.staffroles td.tc3 { white-space: nowrap; width: 100px }
.staffroles td.tc4 { white-space: nowrap; padding-right: 10px }
table.aliases td { padding: 0 5px; }
table.aliases td.key { padding: 0 5px 0 0; width: auto }


/***** Staff display on VN pages *****/

div.staff ul { list-style: none; margin: 5px 15px; float: left; min-width: 300px }
div.staff li b.grayedout { margin-left: 10px }

div.charsum_list { text-align: center }
div.charsum_list .name { white-space: nowrap; }
div.charsum_list .name  a { font-weight: bold }
div.charsum_list .name  i { float: right }
div.charsum_list .actor { border-top: 1px solid $border$; padding-top: 3px }
div.charsum_list .actor b.grayedout { margin-left: 10px }
div.charsum_list .charsum_bubble {
  background: $boxbg$;
  display: inline-block;
  text-align: left;
  vertical-align: top;
  width: 320px;
  margin: 3px;
  padding: 3px 10px;
}


/***** Staff edit *****/

#jt_box_vn_cast  #cast_import { clear: right; float: right; }
#jt_box_vn_cast  table,
#jt_box_vn_staff table { margin-bottom: 10px; margin-left: 20px }
#jt_box_vn_cast  h2,
#jt_box_vn_staff h2 { margin: 0 0 3px 0px; }
#jt_box_vn_cast  td,
#jt_box_vn_staff td,
#jt_box_vn_cast  td.tc_role,
#jt_box_vn_cast  td.tc_role select,
#jt_box_vn_staff td.tc_role,
#jt_box_vn_staff td.tc_role select { width: 120px }
#jt_box_vn_cast  td.tc_staff,
#jt_box_vn_staff td.tc_staff,
.staffedit       td.tc_name,
.staffedit       td.tc_original { width: 200px }
#jt_box_vn_cast  td.tc_staff input,
#jt_box_vn_staff td.tc_staff input,
.staffedit       td.tc_name input,
.staffedit       td.tc_original input { width: 200px }
#jt_box_vn_cast  td.tc_note,
#jt_box_vn_cast  td.tc_note input,
#jt_box_vn_staff td.tc_note,
#jt_box_vn_staff td.tc_note input { width: 250px }
#jt_box_vn_cast  td.tc_add,
#jt_box_vn_staff td.tc_add,
.staffedit       td.tc_add { width: 40px; text-align: left }
.staffedit table.names td { padding: 1px 2px; vertical-align: middle; }
.staffedit table.names tr.alias_new td { padding-top: 8px }

/***** Documentation pages *****/

.docs               { padding: 0 15% 20px 15%; line-height: 1.4 }
.docs h3            { margin: 30px 0 5px; font-size: 16px }
.docs h4            { margin-top: 15px; font-size: 14px }
.docs dd            { margin: 5px 0 5px 120px }
.docs dt            { float: left }
.docs ul, .docs ol  { margin: 5px 0 5px 20px }
.docs table         { margin: 10px; width: 95% }
.docs td            { white-space: nowrap }
.docs td            { white-space: nowrap }
.docs td+td+td+td,
.docs td[colspan],
.docs td[colspan]+td,
.docs td[colspan]+td+td { white-space: normal }
.docs p + p         { padding-top: 10px }
.docs ul.index      { display: block; float: right; width: 190px; padding: 2px; margin: 0 0 10px 5px; background: $boxbg$; border: 1px solid $border$; }
.docs ul.index li   { list-style-type: none; }
.docs ul.index li a { margin: 0 0 0 10px; }
.docs img           { margin: 5px }



/* vote lists */

div.votelist td.tc1 { width: 100px; padding-top: 0; padding-bottom: 0 }
div.votelist td.tc2 { width: 50px; text-align: right; padding-right: 10px }


/***** Wishlist browser ******/

.wishlist .tc1     { padding-top: 0; padding-bottom: 0; }
.wishlist tfoot td { padding: 0 0 0 25px }



/***** User VN list browser ******/

#expandall, .collapse_but { cursor: pointer }
.browse.rlist .tc1 { width: 16px; padding-bottom: 0 }
.browse.rlist .tc2 { width: 16px; padding-bottom: 0 }
.browse.rlist .tc3 { width: 60px }
.browse.rlist .tc3_5 b { margin-left: 10px }
.browse.rlist .tc4 { width: 60px; text-align: right; padding-top: 0; padding-bottom: 0 }
.browse.rlist .tc6 { width: 100px }
.browse.rlist .tc7 { width: 90px }
.browse.rlist .tc8 { width: 70px }
.browse.rlist tfoot select { width: 200px }
.browse.rlist .relhid .tc6 { padding-left: 15px; width: auto }


/***** User notifications *****/

.browse.notifies td.tc1       { width: 14px }
.browse.notifies td.tc3       { width: 100px }
.browse.notifies td.tc4       { width: 75px }
.browse.notifies tbody td.tc5 a { color: $grayedout$ }
.browse.notifies td.tc5 i     { font-style: normal; color: $maintext$ }
.browse.notifies .unread td   { font-weight: bold }
.browse.notifies tfoot td     { padding: 0 0 0 25px }



/***** Userpage *****/

.userpage table { width: 600px; margin: 0 auto; }
.userpage .key  { width: 100px; }


/***** User posts browser ****/
div.uposts table    { table-layout: fixed }
div.uposts td       { white-space: nowrap }
div.uposts td.tc1   { width: 60px; padding-left: 0!important; padding-right: 0; text-align: right }
div.uposts td.tc2   { width: 40px; padding-left: 0 }
div.uposts td.tc3   { width: 80px; }
div.uposts td.tc4   { overflow: hidden }
div.uposts td.tc4 b { margin-left: 10px }




/***** Tag page *****/

.tagtree        { margin-left: 20px; margin-top: -20px; list-style-type: none; }
.tagtree li     { float: left; width: 230px; margin-top: 10px; }
.tagtree li li  { float: none; width: auto; margin-top: 0; }
.tagtree ul     { margin-left: 10px; list-style-type: none; }
.tagvnlist .tc1 { width: 105px; }
.tagvnlist .tc1 i { font-style: normal; font-size: 10px }
.tagvnlist .tc3 { text-align: right; padding: 0; }
.tagvnlist .tc4 { padding: 0; }
/* ... */

